--- a/chewy/src/main/webapp/WEB-INF/web.xml
+++ b/chewy/src/main/webapp/WEB-INF/web.xml
@@ -43,12 +43,30 @@
 			<param-value>/WEB-INF/config/egovframework/springmvc/dispatcher-servlet.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
+		
+		<!-- 업로드 관련 설정 -->
+		<multipart-config>
+			<location>C:\\upload\\temp</location>		
+			<max-file-size>20971520</max-file-size>					<!-- 1MB * 20 -->
+			<max-request-size>41943040</max-request-size>			<!-- 40MB -->
+			<file-size-threshold>20971520</file-size-threshold>		<!-- 20MB -->
+		</multipart-config>
+		
 	</servlet>
-    
+	
 	<servlet-mapping>
 		<servlet-name>action</servlet-name>
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
+	
+<!-- 	 <servlet-mapping> -->
+
+<!--         <servlet-name>action</servlet-name> -->
+
+<!--         <url-pattern>*.ajax</url-pattern> -->
+
+<!--     </servlet-mapping> -->
+
     
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
